# rust-volatility

./: .gitignore  README.md  prometheus.yml
binance_volatility/: Cargo.toml  README.md
binance_volatility/src/: lib.rs  main.rs
binance_volatility/src/client/: mod.rs  tests.rs
binance_volatility/src/math/: mod.rs  tests.rs
binance_volatility/tests/: integration_test.rs
uniswap_volatility/: Cargo.toml  README.md
uniswap_volatility/src/: lib.rs  main.rs
uniswap_volatility/src/client/: mod.rs  tests.rs
uniswap_volatility/src/math/: mod.rs  tests.rs
uniswap_volatility/tests/: integration.rs
