[package]
name = "binance_volatility"
version = "0.1.0"
edition = "2021"

[dependencies]
# For asynchronous runtime
tokio = { version = "1", features = ["full"] }

# For WebSocket connections
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
url = "2.2.2"

# For JSON parsing
serde_json = "1.0"

# Futures utilities
futures-util = "0.3"

# Logging
log = "0.4"
env_logger = "0.11.5"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

# Exposition
prometheus = "0.13.3"
hyper = { version = "0.14", features = ["server", "full"] }


[dev-dependencies]
# Testing framework
tokio = { version = "1", features = ["full"] }
